# brewfyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/brew-tools/: SKILL.md
src/brewfyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_api.py
