[project]
name = "brewfyi"
version = "0.1.2"
description = "Coffee knowledge API client — search coffee varieties, brew methods, and terms from BrewFYI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "coffee",
    "espresso",
    "brewing",
    "pour-over",
    "arabica",
    "robusta",
    "roasting",
    "barista",
    "latte",
    "specialty-coffee",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["brewfyi[api,cli,mcp]"]

[project.scripts]
brewfyi = "brewfyi.cli:app"

[project.entry-points."mcp.servers"]
brewfyi = "brewfyi.mcp_server:mcp"

[project.urls]
Homepage = "https://brewfyi.com"
Documentation = "https://brewfyi.com/developers/"
Repository = "https://github.com/fyipedia/brewfyi"
Issues = "https://github.com/fyipedia/brewfyi/issues"
Changelog = "https://github.com/fyipedia/brewfyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brewfyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
